@@ -1,3 +1,8 @@
+2006-01-12 07:48  bchiara
+
+	* ChangeLog, glade/etherape.glade2, src/diagram.c: Simplified
+	legend, fixing a positioning bug.
+
 2006-01-11 21:37  bchiara
 
 	* src/info_windows.c: oops. Stupid format bug
